--- a/css/modal.css
+++ b/css/modal.css
@@ -9,3 +9,22 @@
 .modal-body .form-horizontal .col-sm-offset-2 {
     margin-left: 15px;
 }
+
+.modal-dialog {
+    height: 95%;
+    width: 95%;
+}
+
+.modal-content {
+    height: auto;
+    min-height: 100%;
+    border-radius: 0;
+}
+
+/* .modal-item {
+
+} */
+/* .modal-body {
+    max-height: calc(100vh - 210px);
+    overflow-y: auto;
+} */
