--- a/css/datatableedit.css
+++ b/css/datatableedit.css
@@ -3,8 +3,9 @@
     /* margin: 30px auto; */
     background: #fff;
     /* padding: 20px;	 */
-    box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 }
+
 /* .table-title {
     padding-bottom: 10px;
     margin: 0 0 10px;
@@ -26,56 +27,108 @@
 .table-title .add-new i {
     margin-right: 4px;
 } */
+
 table.table {
     table-layout: fixed;
 }
+
 table.table tr th, table.table tr td {
     border-color: #e9e9e9;
 }
+
 table.table th i {
     font-size: 13px;
     margin: 0 5px;
     cursor: pointer;
 }
+
 table.table th:last-child {
     width: 100px;
 }
+
 table.table td a {
     cursor: pointer;
     display: inline-block;
     margin: 0 5px;
     min-width: 24px;
-}    
+}
+
 table.table td a.add, a.copy {
     color: #27C46B;
 }
-table.table td a.view, a.edit {
+
+table.table td a.edit {
     color: #FFC107;
 }
+
+table.table td a.star {
+    color: #FFC107;
+}
+
+table.table td a.view {
+    color: aqua;
+}
+
+table.table td a.timer {
+    color: aqua;
+}
+
+table.table td a.default {
+    color: black;
+}
+
+table.table td a.all_inbox {
+    color: darkred;
+}
+
+table.table td a.add_circle {
+    color: green;
+}
+
+table.table td a.timer:hover {
+    color: #FFC107;
+}
+
 table.table td a.delete, a.approve {
     color: #E34724;
 }
+
 table.table td a.approve {
     color: deepskyblue;
 }
+
 table.table td i {
     font-size: 19px;
 }
+
 table.table td a.add i {
     font-size: 24px;
     margin-right: -1px;
     position: relative;
     top: 3px;
-}    
+}
+
 table.table .form-control {
     height: 32px;
     line-height: 32px;
     box-shadow: none;
     border-radius: 2px;
 }
+
 table.table .form-control.error {
     border-color: #f50000;
 }
+
 table.table td .add {
     display: none;
+}
+
+#actions tr.chosen {
+    background-color: rgba(41, 103, 182, 0.89);
+    color: #FFF;
+}
+
+#informations tr.chosen {
+    background-color: rgba(41, 103, 182, 0.89);
+    color: #FFF;
 }
