--- a/css/modal.css
+++ b/css/modal.css
@@ -1,30 +1,48 @@
+/* Tất cả các modal */
 .modal-body .form-horizontal .col-sm-2,
 .modal-body .form-horizontal .col-sm-10 {
     width: 100%
 }
-
 .modal-body .form-horizontal .control-label {
     text-align: left;
 }
 .modal-body .form-horizontal .col-sm-offset-2 {
     margin-left: 15px;
 }
-
-.modal-dialog {
-    height: 95%;
-    width: 95%;
-}
-
 .modal-content {
     height: auto;
     min-height: 100%;
     border-radius: 0;
 }
-
-/* .modal-item {
-
-} */
-/* .modal-body {
-    max-height: calc(100vh - 210px);
+.modal-header {
+    height: 50px;
+}
+.modal-body {
+    max-height: calc(100vh - 120px);
     overflow-y: auto;
-} */
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+.modal-body-perform-task {
+    max-height: calc(100vh - (50px+0px));
+}
+
+.modal-header .modal-title {
+    font-weight: bold;
+}
+
+/* Modal full màn hình */
+.modal-full {
+    overflow: hidden !important;
+    padding-left: 4px !important;
+    right: -22px;
+    top: 1px;
+    bottom: 1%;
+}
+
+.modal-dialog-full {
+    height: 99%;
+    width: 99%;
+    overflow-y: initial !important;
+}
