--- a/css/infoemployee.css
+++ b/css/infoemployee.css
@@ -7,10 +7,10 @@ fieldset.scheduler-border {
 }
 
 legend.scheduler-border {
-    font-size: 1em !important;
+    /* font-size: 1em !important; */
     font-weight: bold !important;
-    text-align: left !important;
-    width:auto;
-    padding:0 10px;
+    /* text-align: left !important; */
+    /* width:auto; */
+    /* padding:0 10px; */
     border-bottom:none;
 }
