--- a/css/gridtable.css
+++ b/css/gridtable.css
@@ -13,3 +13,19 @@
     left:-17px;
     cursor: pointer;
 }
+
+td.glyphicon-chevron-down:before {
+    content: "" !important;
+}
+
+td.glyphicon-chevron-right:before {
+    content: "" !important;
+}
+
+span.treegrid-indent.glyphicon-chevron-down::before {
+    content: "" !important;
+}
+
+span.treegrid-indent.glyphicon-chevron-right::before {
+    content: "" !important;
+}
